自分の投稿したコメントへのいいねをできないように

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -909,7 +909,7 @@
         <image name="shabon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ubo-jr-8fC"/>
-        <segue reference="Uby-AE-S2X"/>
+        <segue reference="zVW-er-emc"/>
+        <segue reference="UIR-Rk-hcD"/>
     </inferredMetricsTieBreakers>
 </document>
