--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -825,11 +825,18 @@
                                 <rect key="frame" x="31" y="313" width="99" height="17"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hq8-xe-0zx">
-                                <rect key="frame" x="31" y="379" width="40" height="31"/>
+                            <view alpha="0.65000000000000002" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XOW-qx-8EF">
+                                <rect key="frame" x="18" y="364" width="62" height="62"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ひとこと" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fru-Rc-DsP">
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="hq8-xe-0zx">
+                                        <rect key="frame" x="0.0" y="0.0" width="62" height="62"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.1671643494" green="0.65547507739999999" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="ひとこと" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fru-Rc-DsP">
                                 <rect key="frame" x="88" y="347" width="271" height="96"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" name="JK-Gothic-M" family="JK Gothic M" pointSize="17"/>
@@ -848,6 +855,8 @@
                         <outlet property="detailBorder" destination="vHB-og-ecM" id="Y8Z-Hf-Fph"/>
                         <outlet property="hitokoto" destination="vyF-1c-ILP" id="amO-K2-vQV"/>
                         <outlet property="hitokotoAvater" destination="hq8-xe-0zx" id="hKz-5t-hDz"/>
+                        <outlet property="hitokotoAvaterBackground" destination="XOW-qx-8EF" id="nNr-ah-9qu"/>
+                        <outlet property="hitokotoLabel" destination="fru-Rc-DsP" id="31X-a9-rVp"/>
                         <outlet property="moveLocate" destination="lct-h9-1fQ" id="CQm-11-Sgo"/>
                         <outlet property="nayamiDetail" destination="R8r-Ri-hfx" id="PTl-A0-heq"/>
                         <outlet property="ownerMessage" destination="t6k-CY-2lc" id="5ga-ek-e4k"/>
